# robust-text-to-json-agent

./: .gitignore  README.md  clients.py  main.py  pyproject.toml  settings.py  test.py
agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
cli/: __init__.py  app.py  rich_display.py
misc/: truncator.py
src/text_to_json/: clients.py  settings.py
src/text_to_json/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/text_to_json/chunking/: __init__.py  semantic.py
src/text_to_json/cli/: __init__.py  main.py  rich_display.py
src/text_to_json/misc/: truncator.py
src/text_to_json/tools/: apply_patches.py  definitions.py  inspect_keys.py  read_value.py  search_pointer.py  update_guidance.py
tests/: conftest.py  test_apply_patches.py  test_chunking.py  test_inspect_keys.py  test_nodes.py  test_read_value.py  test_search_pointer.py  test_state.py  test_truncator.py  test_update_guidance.py
tools/: __init__.py  apply_patches.py  read_value.py
