[project]
name = "text-to-json"
version = "2.0.0"
description = "LangGraph agent that extracts structured JSON from arbitrarily long text via LLM — with optional JSON Schema, semantic chunking, incremental JSON Patch, and anti-hallucination safeguards."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.4",
    "langchain-experimental>=0.3.4",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "pydantic-settings>=2.0.2",
]

[project.scripts]
text-to-json = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools", "chunking", "cli"]
